# air_lite

./: .dockerignore  .env.example  .env.local  .gitignore  HANDOVER.md  ODOO_vs_APP_AUDIT.md  PRODUCTS_COST_AUDIT.md  PROJECT_DESCRIPTION_V2.md  README.md  REMINDER.md  SSOT_VALIDATION.md  SUPERREADME.md  Solicitud de Conexión a Odoo.txt  Solicitud de Datos Odoo.md  _DEEP_REFACTOR_PLAN.md  _deep_refactor_SCOPE_CONCERN_RBAC_2026-03-23.md  _deep_refactor_authoritative_client_feedback.md  _deep_refactor_clarifying_questions_1_.md  _deep_refactor_clarifying_questions_2_.md  _deep_refactor_clarifying_questions_3_.md  _deep_refactor_clarifying_questions_4_.md  _deep_refactor_rationale.md  _deep_refactor_ref_doc_proposal.txt  _odoo_market_research.md  setup.sh
air_scaffold/: Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
air_scaffold/air_scaffold/: dagster.yaml  definitions.py
airefill_dagster/: .env.example  Dockerfile  Dockerfile.pipeline  README.md  dagster-task-def-correct.json  dagster-task-def-updated.json  dagster-task-def.json  pipeline-task-def.json  pyproject.toml  setup.cfg  setup.py
airefill_dagster/airefill/: definitions.py  inventory_optimization.py  legacy_pipeline.py  ml_pipelines.py  pipelines.py  resources.py  run_pipeline.py
airefill_dagster/scripts/: README.md  train.py
api-node/: .dockerignore  .env.example  .gitignore  Dockerfile  deploy_script.sh  deployment_guide.md  eslint.config.js  jest.config.ts  migrate.js  package-lock.json  package.json  readme.md  task-def.json
changelogs/: 2026-03-05_fix-ventas-ssot-alignment.md  (+7 more)
(+266 files in other folders)
